network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeds-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
        - example.com
      secretName: tls-secret
  rules:
    - host: example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: seeds-test
                port:
                  number: 8080
